Fix: scrollbar-color property should only be applied on Firefox

--- a/sources/css/root.css
+++ b/sources/css/root.css
@@ -104,7 +104,12 @@ html {
     background-color: var(--general-body-background-color);
     font-family: var(--general-font-family);
     font-size: 87.5%; /* 87.5%: 14px | 93.75%: 15px */
-    scrollbar-color: var(--color-primary) transparent;
+}
+
+@-moz-document url-prefix() {
+    html {
+        scrollbar-color: var(--color-primary) transparent;
+    }
 }
 
 body {
